feat(back-test): history data for back test
